--- a/styles.css
+++ b/styles.css
@@ -58,8 +58,8 @@ img{
     width: 100%;
     border-style: solid;
     border-radius: 15px;
-    border-width: 10px;
-    border-color: #FFD09B;
+    border-width: 20px;
+    border-color: #ffd09b71;
     transition: all 0.5s;
 }
 
@@ -95,8 +95,12 @@ h1, p{
 }
 
 .last{
-    height: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-weight: 600;
 }
+
 @keyframes move {
     100% {
         transform: translate3d(0, 0, 1px) rotate(360deg);
@@ -145,7 +149,7 @@ h1, p{
     animation-duration: 191s;
     animation-delay: -29s;
     transform-origin: -3vw 0vh;
-    box-shadow: 88vmin 0 11.57671510585402vmin currentColor;
+    box-shadow: 88vmin 0 2vmin currentColor;
     z-index: 1;
 }
 .background span:nth-child(2) {
@@ -155,7 +159,7 @@ h1, p{
     animation-duration: 10s;
     animation-delay: -165s;
     transform-origin: 15vw -11vh;
-    box-shadow: -88vmin 0 11.34120370046524vmin currentColor;
+    box-shadow: -88vmin 0 2vmin currentColor;
 }
 .background span:nth-child(3) {
     color: #ffecc8;
@@ -164,7 +168,7 @@ h1, p{
     animation-duration: 420s;
     animation-delay: -21s;
     transform-origin: 3vw 3vh;
-    box-shadow: 88vmin 0 11.879289248092878vmin currentColor;
+    box-shadow: 88vmin 0 2vmin currentColor;
 }
 .background span:nth-child(4) {
     color: #ffecc8;
@@ -173,7 +177,7 @@ h1, p{
     animation-duration: 246s;
     animation-delay: -248s;
     transform-origin: 17vw 12vh;
-    box-shadow: 88vmin 0 11.175179154868987vmin currentColor;
+    box-shadow: 88vmin 0 2vmin currentColor;
 }
 .background span:nth-child(5) {
     color: #ffb0b0;
@@ -182,7 +186,7 @@ h1, p{
     animation-duration: 13s;
     animation-delay: -94s;
     transform-origin: 4vw 21vh;
-    box-shadow: -88vmin 0 11.53754639563546vmin currentColor;
+    box-shadow: -88vmin 0 2vmin currentColor;
 }
 .background span:nth-child(6) {
     color: #ffb0b0;
@@ -191,7 +195,7 @@ h1, p{
     animation-duration: 264s;
     animation-delay: -21s;
     transform-origin: -20vw 4vh;
-    box-shadow: -88vmin 0 11.988239565095627vmin currentColor;
+    box-shadow: -88vmin 0 2vmin currentColor;
 }
 .background span:nth-child(7) {
     color: #ffecc8;
@@ -200,7 +204,7 @@ h1, p{
     animation-duration: 161s;
     animation-delay: -348s;
     transform-origin: 9vw -23vh;
-    box-shadow: -88vmin 0 11.94438143046004vmin currentColor;
+    box-shadow: -88vmin 0 2vmin currentColor;
 }
 .background span:nth-child(8) {
     color: #ffecc8;
@@ -209,7 +213,7 @@ h1, p{
     animation-duration: 90s;
     animation-delay: -289s;
     transform-origin: 3vw -14vh;
-    box-shadow: -88vmin 0 11.177580298607669vmin currentColor;
+    box-shadow: -88vmin 0 2vmin currentColor;
 }
 .background span:nth-child(9) {
     color: #ffd09b;
@@ -218,7 +222,7 @@ h1, p{
     animation-duration: 254s;
     animation-delay: -198s;
     transform-origin: -19vw 24vh;
-    box-shadow: 88vmin 0 11.61373498872216vmin currentColor;
+    box-shadow: 88vmin 0 2vmin currentColor;
 }
 .background span:nth-child(10) {
     color: #ffd09b;
@@ -227,7 +231,7 @@ h1, p{
     animation-duration: 248s;
     animation-delay: -26s;
     transform-origin: -15vw -6vh;
-    box-shadow: 88vmin 0 11.854702928616597vmin currentColor;
+    box-shadow: 88vmin 0 2vmin currentColor;
 }
 .background span:nth-child(11) {
     color: #ffd09b;
@@ -236,7 +240,7 @@ h1, p{
     animation-duration: 76s;
     animation-delay: -362s;
     transform-origin: 9vw -16vh;
-    box-shadow: 88vmin 0 11.59400485374471vmin currentColor;
+    box-shadow: 88vmin 0 2vmin currentColor;
 }
 .background span:nth-child(12) {
     color: #ffb0b0;
@@ -245,7 +249,7 @@ h1, p{
     animation-duration: 222s;
     animation-delay: -210s;
     transform-origin: 23vw 11vh;
-    box-shadow: -88vmin 0 11.707561188134267vmin currentColor;
+    box-shadow: -88vmin 0 2vmin currentColor;
 }
 .background span:nth-child(13) {
     color: #ffecc8;
@@ -254,7 +258,7 @@ h1, p{
     animation-duration: 167s;
     animation-delay: -349s;
     transform-origin: -15vw -18vh;
-    box-shadow: 88vmin 0 11.304362452014573vmin currentColor;
+    box-shadow: 88vmin 0 2vmin currentColor;
 }
 .background span:nth-child(14) {
     color: #ffb0b0;
@@ -263,7 +267,7 @@ h1, p{
     animation-duration: 254s;
     animation-delay: -184s;
     transform-origin: 12vw -12vh;
-    box-shadow: 88vmin 0 11.195793582335366vmin currentColor;
+    box-shadow: 88vmin 0 2vmin currentColor;
 }
 .background span:nth-child(15) {
     color: #ffb0b0;
@@ -272,7 +276,7 @@ h1, p{
     animation-duration: 347s;
     animation-delay: -396s;
     transform-origin: -8vw -2vh;
-    box-shadow: -88vmin 0 11.298505300585171vmin currentColor;
+    box-shadow: -88vmin 0 2vmin currentColor;
 }
 .background span:nth-child(16) {
     color: #ffecc8;
@@ -281,7 +285,7 @@ h1, p{
     animation-duration: 334s;
     animation-delay: -126s;
     transform-origin: -20vw -8vh;
-    box-shadow: 88vmin 0 11.168221214309963vmin currentColor;
+    box-shadow: 88vmin 0 2vmin currentColor;
 }
 .background span:nth-child(17) {
     color: #ffecc8;
@@ -290,7 +294,7 @@ h1, p{
     animation-duration: 264s;
     animation-delay: -127s;
     transform-origin: -12vw -20vh;
-    box-shadow: 88vmin 0 11.152913526326758vmin currentColor;
+    box-shadow: 88vmin 0 2vmin currentColor;
 }
 .background span:nth-child(18) {
     color: #ffecc8;
@@ -299,7 +303,7 @@ h1, p{
     animation-duration: 93s;
     animation-delay: -245s;
     transform-origin: 4vw 12vh;
-    box-shadow: -88vmin 0 11.082146735655495vmin currentColor;
+    box-shadow: -88vmin 0 2vmin currentColor;
 }
 .background span:nth-child(19) {
     color: #ffd09b;
@@ -308,7 +312,7 @@ h1, p{
     animation-duration: 111s;
     animation-delay: -374s;
     transform-origin: -4vw -6vh;
-    box-shadow: 88vmin 0 11.88783873896977vmin currentColor;
+    box-shadow: 88vmin 0 2vmin currentColor;
 }
 .background span:nth-child(20) {
     color: #ffd09b;
@@ -317,7 +321,7 @@ h1, p{
     animation-duration: 243s;
     animation-delay: -77s;
     transform-origin: -11vw -20vh;
-    box-shadow: -88vmin 0 11.887764043455915vmin currentColor;
+    box-shadow: -88vmin 0 2vmin currentColor;
 }
 .background span:nth-child(21) {
     color: #ffd09b;
@@ -326,7 +330,7 @@ h1, p{
     animation-duration: 344s;
     animation-delay: -135s;
     transform-origin: 4vw 25vh;
-    box-shadow: -88vmin 0 11.574223613683591vmin currentColor;
+    box-shadow: -88vmin 0 2vmin currentColor;
 }
 .background span:nth-child(22) {
     color: #ffd09b;
@@ -335,7 +339,7 @@ h1, p{
     animation-duration: 317s;
     animation-delay: -184s;
     transform-origin: 5vw -16vh;
-    box-shadow: 88vmin 0 11.539367026150929vmin currentColor;
+    box-shadow: 88vmin 0 2vmin currentColor;
 }
 .background span:nth-child(23) {
 
@@ -345,9 +349,10 @@ h1, p{
     animation-duration: 212s;
     animation-delay: -398s;
     transform-origin: 7vw 15vh;
-    box-shadow: 88vmin 0 11.935467127244472vmin currentColor;
+    box-shadow: 88vmin 0 2vmin currentColor;
 }
 
 main{
     z-index: 2;
 }
+
